--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,21 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.5.0-131.0.dev <4.0.0'
+  sdk: '>=3.4.0-131.0.dev <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  geolocator: ^11.0.0
   flutter_lints: ^3.0.0
   http: ^1.2.1
   intl: ^0.19.0
   provider: ^6.1.2
+  
 flutter:
   uses-material-design: true
   assets:
